@@ -1,9 +1,7 @@
+// $Id$
+
 #include "Select_Manager.h"
 
-
-ACE_RCSID (drwho,
-           Select_Manager,
-           "$Id$")
 
 Select_Manager::~Select_Manager (void)
 {
